--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "mongoose": "^6.6.5",
+    "node-fetch": "^3.2.10",
     "swagger-ui-express": "^4.5.0"
   }
 }
